...
  final ImagePicker _imagePicker = ImagePicker();

  final _nameController = TextEditingController();
  final _qtyController = TextEditingController();

  String _selectedUnit = 'g';
  final List<String> _availableUnits = ['g', 'ml']; // List of supported units
  DateTime _expirationDate = DateTime.now().add(
    const Duration(days: 7),
  ); // default 7 days

  bool _isProcessing = false;
  int? _calculatedCalories; // The calorie result of the storage and calculation
...
    final primary = theme.primaryColor;
    return Scaffold(
      key: const Key(TestKeys.homeScreenScaffold),
      backgroundColor: const Color(0xFFF8FAFC),
      appBar: AppBar(
        title: const Text(
          "FreshBasket",
          style: TextStyle(fontWeight: FontWeight.bold),
        ),
        actions: [
          IconButton(
            icon: const Icon(Icons.qr_code_scanner),
            tooltip: 'Scan or Upload',
...
                          height: 50,
                          child: ElevatedButton.icon(
                            key: const Key(TestKeys.ingredientSaveButton),
                            onPressed: _save,
                            icon: const Icon(Icons.save_outlined),
                            label: const Text(
                              "Save to My Inventory",
                              style: TextStyle(
                                fontSize: 14,
                                fontWeight: FontWeight.bold,
                              ),
                            ),
                            style: ElevatedButton.styleFrom(
...
